# ExtensionValidator

./: .gitignore  .vscodeignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  zozimus-extension-validator-0.1.0.vsix
docs/: index.html  style.css
extension_validator/: __init__.py  cli.py  manifest.py  result.py  validator.py
extension_validator/policies/: __init__.py  base.py  chrome.py  edge.py  firefox.py  safari.py
policies/: chrome-policies.json  custom-definitions.json  edge-policies.json  firefox-policies.json  safari-policies.json
scripts/: append-reported-rejections.js
src/: extension.ts  policyFetcher.ts  policyStore.ts  reportGenerator.ts  sidebarProvider.ts  types.ts  validator.ts
tests/: __init__.py  test_chrome.py  test_edge.py  test_firefox.py  test_manifest.py  test_safari.py  test_validator.py
tests/fixtures/unsafe_csp/: manifest.json
tests/fixtures/unsupported_perms/: manifest.json
tests/fixtures/valid_mv2/: manifest.json
tests/fixtures/valid_mv3/: manifest.json
